Move arch and flathub.json handling to master worker
This way we won't even queue arches that we're not building.

--- a/master.cfg
+++ b/master.cfg
@@ -277,20 +277,6 @@ def hide_on_success_or_skipped(results, s):
 def BuildIsOfficial(step):
     return step.build.getProperty ('flathub-official-build', False)
 
-def ShouldBuildArch(build):
-    arch = build.getProperty ('flathub-arch', '')
-    config = build.getProperty ('flathub-config', {})
-
-    if config.has_key("skip-arches"):
-        if arch in config["skip-arches"]:
-            return False
-
-    if config.has_key("only-arches"):
-        if arch not in config["only-arches"]:
-            return False
-
-    return True
-
 flatpak_update_lock = util.WorkerLock("flatpak-update")
 # This lock is taken in a shared mode for builds, but in exclusive mode when doing
 # global worker operations like cleanup
@@ -301,24 +287,6 @@ repo_lock = util.MasterLock("repo")
 # The 'builders' list defines the Builders, which tell Buildbot how to perform a build:
 # what steps, and which workers can execute them.  Note that any particular build will
 # only take place on one worker.
-
-class ReadConfigStep(steps.BuildStep, CompositeStepMixin):
-    def __init__(self, **kwargs):
-        steps.BuildStep.__init__(self, **kwargs)
-
-    @defer.inlineCallbacks
-    def run(self):
-        flathub_config = {}
-        content = yield self.getFileContentFromWorker("flathub.json")
-        if content != None:
-            flathub_config = json.loads(content)
-        self.setProperty("flathub-config", flathub_config, "flathub.json")
-        defer.returnValue(buildbot.process.results.SUCCESS)
-
-    def getResultSummary(self):
-        r = {}
-        r[u'build'] =  "%s" % (self.build.getProperty("flathub-desc", "?"))
-        return r
 
 class MaybeAddSteps(steps.BuildStep):
     parms = steps.BuildStep.parms + ['steps']
@@ -412,7 +380,6 @@ def create_build_factory():
         steps.Git(name="checkout manifest",
                   repourl=util.Property('repository'),
                   mode='incremental', branch='master', submodules=True),
-        ReadConfigStep(name="Read config"),
         steps.ShellSequence(
             name='Init',
             haltOnFailure=True,
@@ -425,47 +392,42 @@ def create_build_factory():
                 # Clean up rofiles-fuse
                 shellArg('for i in .flatpak-builder/rofiles/rofiles-*/; do fusermount -u $i; done || true')
                 ]),
-        MaybeAddSteps(
-            ShouldBuildArch,
-            name="Should we build",
-            steps=[
-                steps.FileDownload(name='downloading public key',
-                                   haltOnFailure=True,
-                                   hideStepIf=hide_on_success,
-                                   mastersrc="flathub.gpg",
-                                   workerdest="flathub.gpg"),
-                steps.ShellSequence(
-                    name='Prepare for build',
-                    haltOnFailure=True,
-                    logEnviron=False,
-                    commands=[
-                        # Add flathub remote
-                        shellArg(['flatpak', '--user', 'remote-add', '--if-not-exists', '--gpg-import=flathub.gpg',
-                                  'flathub', flathub_upstream_repo]),
-                        # Update flathub remote url
-                        shellArg(['flatpak', '--user', 'remote-modify', '--url='+ flathub_upstream_repo, 'flathub']),
-                    ]),
-                FlatpakBuildStep(name='Build'),
-                steps.ShellCommand(
-                    name='Check for AppStream xml',
-                    doStepIf=lambda step: not step.build.getProperty('flathub-config', {}).get("skip-appstream-check"),
-                    haltOnFailure=True,
-                    logEnviron=False,
-                    command=util.Interpolate('stat builddir/*/share/app-info/xmls/%(prop:flathub-id)s.xml.gz')),
-                steps.ShellCommand(
-                    name='Check that the right branch was built',
-                    haltOnFailure=True,
-                    command=util.Interpolate('test ! -d repo/refs/heads/app -o -f repo/refs/heads/app/%(prop:flathub-id)s/%(prop:flathub-arch)s/' + flathub_branch)),
-                steps.ShellSequence(
-                    name='Post-build work',
-                    logEnviron=False,
-                    commands=[
-                        # Ensure directory is there
-                        shellArg(['mkdir', '-p', 'builddir/screenshots']),
-                        # Copy screenshots
-                        shellArg(['cp', '-r', 'builddir/screenshots', 'repo/'])
-                    ])
-                ]),
+        steps.FileDownload(name='downloading public key',
+                           haltOnFailure=True,
+                           hideStepIf=hide_on_success,
+                           mastersrc="flathub.gpg",
+                           workerdest="flathub.gpg"),
+        steps.ShellSequence(
+            name='Prepare for build',
+            haltOnFailure=True,
+            logEnviron=False,
+            commands=[
+                # Add flathub remote
+                shellArg(['flatpak', '--user', 'remote-add', '--if-not-exists', '--gpg-import=flathub.gpg',
+                          'flathub', flathub_upstream_repo]),
+                # Update flathub remote url
+                shellArg(['flatpak', '--user', 'remote-modify', '--url='+ flathub_upstream_repo, 'flathub']),
+            ]),
+        FlatpakBuildStep(name='Build'),
+        steps.ShellCommand(
+            name='Check for AppStream xml',
+            doStepIf=lambda step: not step.build.getProperty('flathub-config', {}).get("skip-appstream-check"),
+            haltOnFailure=True,
+            logEnviron=False,
+            command=util.Interpolate('stat builddir/*/share/app-info/xmls/%(prop:flathub-id)s.xml.gz')),
+        steps.ShellCommand(
+            name='Check that the right branch was built',
+            haltOnFailure=True,
+            command=util.Interpolate('test ! -d repo/refs/heads/app -o -f repo/refs/heads/app/%(prop:flathub-id)s/%(prop:flathub-arch)s/' + flathub_branch)),
+        steps.ShellSequence(
+            name='Post-build work',
+            logEnviron=False,
+            commands=[
+                # Ensure directory is there
+                shellArg(['mkdir', '-p', 'builddir/screenshots']),
+                # Copy screenshots
+                shellArg(['cp', '-r', 'builddir/screenshots', 'repo/'])
+            ]),
         steps.ShellCommand(name='packaging result',
                            haltOnFailure=True,
                            doStepIf=BuildIsOfficial,
@@ -573,62 +535,80 @@ update_repo_factory.addSteps([
 def asciiBasename(s):
     return utils.asciiize(os.path.basename(s))
 
-@util.renderer
-def computeBuildProperties(props):
-    buildnumber = props.getProperty('buildnumber')
-    repository = props.getProperty('repository')
-    force_test_build = props.getProperty ('force-test-build', False)
-    branch = props.getProperty('branch')
-    project = props.getProperty('project')
-    # When you force a build you can get a different app id than the repo module,
-    # we have to save the specified id in the sourcestamps so we can pull it
-    # back out here, so we
-    forced_id = None
-    if project.startswith("forced-build-id/"):
-        forced_id = project[len("forced-build-id/"):]
-    data = builds.lookup_by_git(repository, branch, forced_id)
-    if data.fp_branch:
-        buildid = "%s@%s" % (data.id, data.fp_branch)
-        builddesc = "%s %s" % (data.id, data.fp_branch)
-    else:
-        buildid = data.id
-        builddesc = data.id
-
-    if data.only_arches:
-        arches = data.only_arches
-    else:
-        arches = flathub_arches
-    force_arches = props.getProperty("force-arches", None)
-    if force_arches:
-        arches_s = set()
-        for arch in force_arches.split(","):
-            arches_s.add(utils.asciiize(arch.strip()))
-        arches = list(arches_s)
-
-    return {
-        "flathub-id": data.id,
-        "flathub-arches": arches,
-        "flathub-build-id": buildid,
-        "flathub-buildnumber": buildnumber,
-        "flathub-manifest": data.get_manifest(),
-        "flathub-branch": data.fp_branch,
-        "flathub-custom-buildcmd": data.custom_buildcmd,
-        "flathub-official-build": data.official and not force_test_build,
-        "flathub-artifact-dir": "builds/%s-%s" % (buildid, buildnumber),
-        "flathub-desc": builddesc
-    }
-
-class FlathubPropertiesStep(steps.SetProperties):
+class FlathubPropertiesStep(steps.BuildStep, CompositeStepMixin):
     def __init__(self, **kwargs):
-        steps.SetProperties.__init__(self,
-                                     hideStepIf=hide_on_success,
-                                     properties=computeBuildProperties,
-                                     **kwargs)
+        steps.BuildStep.__init__(self, **kwargs)
+
+    @defer.inlineCallbacks
+    def run(self):
+        props = self.build.properties
+
+        flathub_config = {}
+        content = yield self.getFileContentFromWorker("flathub.json")
+        if content != None:
+            flathub_config = json.loads(content)
+
+        buildnumber = props.getProperty('buildnumber')
+        repository = props.getProperty('repository')
+        force_test_build = props.getProperty ('force-test-build', False)
+        branch = props.getProperty('branch')
+        project = props.getProperty('project')
+        # When you force a build you can get a different app id than the repo module,
+        # we have to save the specified id in the sourcestamps so we can pull it
+        # back out here, so we
+        forced_id = None
+        if project.startswith("forced-build-id/"):
+            forced_id = project[len("forced-build-id/"):]
+        data = builds.lookup_by_git(repository, branch, forced_id)
+        if data.fp_branch:
+            buildid = "%s@%s" % (data.id, data.fp_branch)
+            builddesc = "%s %s" % (data.id, data.fp_branch)
+        else:
+            buildid = data.id
+            builddesc = data.id
+
+        force_arches = props.getProperty("force-arches", None)
+        if force_arches:
+            arches = set()
+            for arch in force_arches.split(","):
+                arches.add(utils.asciiize(arch.strip()))
+            arches = arches & set(flathub_arches)
+        else:
+            arches = set(flathub_arches)
+            if data.only_arches:
+                arches = arches & set(data.only_arches)
+
+            if flathub_config.has_key("only-arches"):
+                arches = arches & set(flathub_config["only-arches"])
+
+            if flathub_config.has_key("skip-arches"):
+                arches = arches - set(flathub_config["skip-arches"])
+
+        # This works around the fact that we can't pass on an empty dict
+        if not flathub_config:
+            flathub_config["empty"] = True
+
+        p = {
+            "flathub-id": data.id,
+            "flathub-arches": list(arches),
+            "flathub-build-id": buildid,
+            "flathub-buildnumber": buildnumber,
+            "flathub-manifest": data.get_manifest(),
+            "flathub-branch": data.fp_branch,
+            "flathub-custom-buildcmd": data.custom_buildcmd,
+            "flathub-official-build": data.official and not force_test_build,
+            "flathub-artifact-dir": "builds/%s-%s" % (buildid, buildnumber),
+            "flathub-desc": builddesc,
+            "flathub-config": flathub_config
+        }
+
+        for k, v in iteritems(p):
+            self.setProperty(k, v, self.name, runtime=True)
+
+        defer.returnValue(buildbot.process.results.SUCCESS)
 
     def getResultSummary(self):
-        r = super(steps.SetProperties, self).getResultSummary()
-        r[u'build'] =  "%s" % self.build.getProperty("flathub-desc", "?")
-        return r
+        return { u'build': "%s" % self.build.getProperty("flathub-desc", "?") }
 
 def ShouldUpdateRepo(step):
     if not BuildIsOfficial(step):
@@ -643,6 +623,9 @@ def ShouldUpdateRepo(step):
 
 build_app_factory = util.BuildFactory()
 build_app_factory.addSteps([
+    steps.Git(name="checkout manifest",
+              repourl=util.Property('repository'),
+              mode='incremental', branch='master', submodules=False),
     FlathubPropertiesStep(name="Set flathub properties"),
     steps.Trigger(name='Build all platforms',
                   haltOnFailure=True,
@@ -660,6 +643,7 @@ build_app_factory.addSteps([
                       'flathub-custom-buildcmd' : util.Property('flathub-custom-buildcmd'),
                       'flathub-official-build' : util.Property('flathub-official-build'),
                       'flathub-desc' : util.Property('flathub-desc'),
+                      'flathub-config' : util.Property('flathub-config'),
                       'reason' : util.Property('reason')
                   }),
     steps.Trigger(name='Update repository',
