github status: Make verbose
Might help us figure out why it is failing

--- a/master.cfg
+++ b/master.cfg
@@ -855,6 +855,7 @@ c['services'] = []
 
 if flathub_github_status_token != '':
     c['services'].append(reporters.GitHubStatusPush(token=flathub_github_status_token,
+                                                    verbose=True,
                                                     context=util.Interpolate("buildbot/%(prop:buildername)s"),
                                                     startDescription='Build started.',
                                                     endDescription='Build done.',
