PRs: Build head, not the merge commit

--- a/master.cfg
+++ b/master.cfg
@@ -916,7 +916,7 @@ class FlathubGithubHandler(GitHubEventHandler):
         if build_id:
             project = 'forced-build-id/%s' % build_id
         change = {
-            'branch': 'refs/pull/{}/merge'.format(issue_nr),
+            'branch': 'refs/pull/{}/head'.format(issue_nr),
             'repository': payload['repository']['html_url'],
             'project': project,
             'category': 'bot-build',
