Fix the github status reporter
The github status reporter assumes that if the project field has a
slash in it it is the github repo owner / repo name. This is not true
when we're using the forced-build-id hack. We fix this by not using
a slash then, which will force it to fall back to detecting this from
the repo url.

--- a/master.cfg
+++ b/master.cfg
@@ -132,8 +132,8 @@ def change_should_build(change):
     try:
         log.msg("Should we build change: %s" % (change))
         forced_id = None
-        if change.project.startswith("forced-build-id/"):
-            forced_id = change.project[len("forced-build-id/"):]
+        if change.project.startswith("forced-build-id-"):
+            forced_id = change.project[len("forced-build-id-"):]
         info = builds.lookup_by_git(change.repository, change.branch, forced_id)
         log.msg("info: %s" % (info))
         if info:
@@ -191,12 +191,12 @@ class AppParameter(util.CodebaseParameter):
             # app id, so in this case we need to remember the actual app id that
             # the user specified
             if buildname:
-                project = 'forced-build-id/%s' % data.id
+                project = 'forced-build-id-%s' % data.id
             else:
-                project = 'flathub/' + data.id
+                project = 'flathub-' + data.id
         elif buildname:
             data = builds.lookup_by_name(buildname)
-            project = 'flathub/' + data.id
+            project = 'flathub-' + data.id
             if branch:
                 data.git_branch = branch
                 # We're overriding the branch, so we loose officialness
@@ -557,8 +557,8 @@ class FlathubPropertiesStep(steps.BuildStep, CompositeStepMixin):
         # we have to save the specified id in the sourcestamps so we can pull it
         # back out here, so we
         forced_id = None
-        if project.startswith("forced-build-id/"):
-            forced_id = project[len("forced-build-id/"):]
+        if project.startswith("forced-build-id-"):
+            forced_id = project[len("forced-build-id-"):]
         data = builds.lookup_by_git(repository, branch, forced_id)
         if data.fp_branch:
             buildid = "%s@%s" % (data.id, data.fp_branch)
@@ -912,9 +912,9 @@ class FlathubGithubHandler(GitHubEventHandler):
             log.msg("WARNING: Ignoring build test request due to lack of perms")
             return [], 'git'
 
-        project = payload['repository']['full_name']
+        project = payload['repository']['full_name'].replace("/", "-")
         if build_id:
-            project = 'forced-build-id/%s' % build_id
+            project = 'forced-build-id-%s' % build_id
         change = {
             'branch': 'refs/pull/{}/head'.format(issue_nr),
             'repository': payload['repository']['html_url'],
