--- a/master.cfg
+++ b/master.cfg
@@ -346,7 +346,7 @@ class FlatpakBuildStep(buildbot.process.buildstep.ShellMixin, steps.BuildStep):
                    util.Property('extra-fb-args'),
                    '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
                    '--default-branch', flathub_branch,
-                   '--subject', util.Interpolate('Build %(prop:flathub-id)s at %(prop:revision)s'),
+                   '--subject', util.Property('flathub-subject'),
                    'builddir', util.Interpolate('%(prop:flathub-manifest)s')]
         if props.getProperty("flathub-custom-buildcmd", False):
             command = ['./build.sh', util.Property('flathub-arch')]
@@ -548,6 +548,7 @@ class FlathubPropertiesStep(steps.BuildStep, CompositeStepMixin):
         if content != None:
             flathub_config = json.loads(content)
 
+        git_subject = props.getProperty('git-subject')
         buildnumber = props.getProperty('buildnumber')
         repository = props.getProperty('repository')
         force_test_build = props.getProperty ('force-test-build', False)
@@ -590,6 +591,7 @@ class FlathubPropertiesStep(steps.BuildStep, CompositeStepMixin):
 
         p = {
             "flathub-id": data.id,
+            "flathub-subject": "%s (%s)" % (git_subject, props.getProperty('got_revision')[:8]),
             "flathub-arches": list(arches),
             "flathub-build-id": buildid,
             "flathub-buildnumber": buildnumber,
@@ -626,6 +628,7 @@ build_app_factory.addSteps([
     steps.Git(name="checkout manifest",
               repourl=util.Property('repository'),
               mode='incremental', branch='master', submodules=False),
+    steps.SetPropertyFromCommand(command="git show --format=%s -s $(git rev-list --no-merges -n 1 HEAD)", property="git-subject"),
     FlathubPropertiesStep(name="Set flathub properties"),
     steps.Trigger(name='Build all platforms',
                   haltOnFailure=True,
@@ -644,6 +647,7 @@ build_app_factory.addSteps([
                       'flathub-official-build' : util.Property('flathub-official-build'),
                       'flathub-desc' : util.Property('flathub-desc'),
                       'flathub-config' : util.Property('flathub-config'),
+                      'flathub-subject' : util.Property('flathub-subject'),
                       'reason' : util.Property('reason')
                   }),
     steps.Trigger(name='Update repository',
@@ -664,6 +668,7 @@ build_app_factory.addSteps([
                       'flathub-custom-buildcmd' : util.Property('flathub-custom-buildcmd'),
                       'flathub-official-build' : util.Property('flathub-official-build'),
                       'flathub-desc' : util.Property('flathub-desc'),
+                      'flathub-subject' : util.Property('flathub-subject'),
                       'reason' : util.Property('flathub-buildnumber')
                   }),
     steps.MasterShellCommand(name="Clean up storage on master",
