Build new pull requests from contributors automatically

--- a/master.cfg
+++ b/master.cfg
@@ -894,10 +894,15 @@ if auth:
 
 class FlathubGithubHandler(GitHubEventHandler):
 
-    def handle_issue_comment(self, payload, event):
-        body = payload["comment"]["body"]
-        assoc = payload["comment"]["author_association"]
-        issue_nr = payload["issue"]["number"]
+    def _prepare_change(change_type, payload):
+        if change_type == "issue":
+            body = payload["comment"]["body"]
+            assoc = payload["comment"]["author_association"]
+            pull_nr = payload["issue"]["number"]
+        else:
+            body = payload[change_type]["body"]
+            assoc = payload[change_type]["author_association"]
+            pull_nr = payload[change_type]["number"]
 
         offset = body.find("bot, build");
         if offset == -1:
@@ -911,25 +916,44 @@ class FlathubGithubHandler(GitHubEventHandler):
             if len(words) > 0:
                 build_id = words[0]
 
-        log.msg("Detected build test request in %s PR %d (id %s)" % (payload['repository']['html_url'], issue_nr, build_id))
+        log.msg("Detected build test request in %s PR %d (id %s)" % (payload['repository']['html_url'], pull_nr, build_id))
 
-        if not assoc in ["COLLABORATOR", "CONTRIBUTOR", "MEMBER", "OWNER"]:
+        if assoc not in ["COLLABORATOR", "CONTRIBUTOR", "MEMBER", "OWNER"]:
             log.msg("WARNING: Ignoring build test request due to lack of perms")
             return [], 'git'
 
-        project = payload['repository']['full_name'].replace("/", "-")
         if build_id:
             project = 'forced-build-id-%s' % build_id
+        else:
+            project = payload['repository']['full_name'].replace("/", "-")
+
         change = {
-            'branch': 'refs/pull/{}/head'.format(issue_nr),
+            'branch': 'refs/pull/{}/head'.format(pull_nr),
             'repository': payload['repository']['html_url'],
             'project': project,
             'category': 'bot-build',
             'author': payload['sender']['login'],
-            'comments': u'GitHub Pull Request #%d test build\n' % (issue_nr)
+            'comments': u'GitHub Pull Request #%d test build\n' % (pull_nr)
         }
 
-        return [change], 'git'
+        return [change]
+
+
+    def handle_issue_comment(self, payload, event):
+        change = _prepare_change("issue", payload)
+        return change, "git"
+
+
+    def handle_pull_request(self, payload, event):
+        action = payload["pull_request"]["action"]
+
+        if action != "opened":
+            log.msg("WARNING: Ignoring build test request due to unsupported pull request state")
+            return [], 'git'
+
+        change = _prepare_change("pull_request", payload)
+        return change, "git"
+
 
 if flathub_github_change_secret != "":
     c['www']['change_hook_dialects'] = {
