Add a check for the correct id in the appdata

--- a/master.cfg
+++ b/master.cfg
@@ -416,6 +416,12 @@ def create_build_factory():
             logEnviron=False,
             command=util.Interpolate('stat builddir/*/share/app-info/xmls/%(prop:flathub-id)s.xml.gz')),
         steps.ShellCommand(
+            name='Check for right id in AppStream xml',
+            doStepIf=lambda step: not step.build.getProperty('flathub-config', {}).get("skip-appstream-check"),
+            haltOnFailure=True,
+            logEnviron=False,
+            command=util.Interpolate('zgrep "<id>%(prop:flathub-id)s\\(.desktop\\)\\?</id>" builddir/*/share/app-info/xmls/%(prop:flathub-id)s.xml.gz')),
+        steps.ShellCommand(
             name='Check that the right branch was built',
             haltOnFailure=True,
             command=util.Interpolate('test ! -d repo/refs/heads/app -o -f repo/refs/heads/app/%(prop:flathub-id)s/%(prop:flathub-arch)s/' + flathub_branch)),
