build results: Unicode and add (test)
These always have to be unicode or we get errors with later
buildbot versions. Also, we add (test) to non-official builds
so its easier to see these in the logs.

--- a/master.cfg
+++ b/master.cfg
@@ -337,8 +337,8 @@ class FlatpakBuildStep(buildbot.process.buildstep.ShellMixin, steps.BuildStep):
     def run(self):
         props = self.build.properties
         id = props.getProperty("flathub-id")
-        self.title = "Building %s.json" % id
-        self.result_title = "Failed to build %s.json" % id
+        self.title = u"Building %s.json" % id
+        self.result_title = u"Failed to build %s.json" % id
         self.updateSummary()
 
         command = ['flatpak-builder', '-v', '--force-clean', '--sandbox', '--delete-build-dirs',
@@ -356,7 +356,7 @@ class FlatpakBuildStep(buildbot.process.buildstep.ShellMixin, steps.BuildStep):
         yield self.runCommand(cmd)
 
         if not cmd.didFail():
-            self.result_title = "Built %s.json" % id
+            self.result_title = u"Built %s.json" % id
 
         defer.returnValue(cmd.results())
 
@@ -487,7 +487,7 @@ class AddArchSteps(steps.BuildStep):
 
     def getResultSummary(self):
         r = {}
-        r[u'build'] =  "%s" % (self.build.getProperty("flathub-desc", "?"))
+        r[u'build'] =  u"%s" % (self.build.getProperty("flathub-desc", "?"))
         return r
 
 update_repo_factory = util.BuildFactory()
@@ -616,7 +616,9 @@ class FlathubPropertiesStep(steps.BuildStep, CompositeStepMixin):
         defer.returnValue(buildbot.process.results.SUCCESS)
 
     def getResultSummary(self):
-        return { u'build': "%s" % self.build.getProperty("flathub-desc", "?") }
+        return { u'build': u"%s%s" %
+                 (u"" if self.build.getProperty("flathub-official-build", False) else u"(test) ",
+                  self.build.getProperty("flathub-desc", "?")) }
 
 def ShouldUpdateRepo(step):
     if not BuildIsOfficial(step):
