--- a/master.cfg
+++ b/master.cfg
@@ -135,7 +135,6 @@ def change_should_build(change):
         if change.project.startswith("forced-build-id-"):
             forced_id = change.project[len("forced-build-id-"):]
         info = builds.lookup_by_git(change.repository, change.branch, forced_id)
-        log.msg("info: %s" % (info))
         if info:
             return info.official or change.category == 'bot-build'
     except:
@@ -453,6 +452,33 @@ def create_build_factory():
     ])
     return build_factory
 
+class BuildDependenciesSteps(steps.BuildStep):
+    parms = steps.BuildStep.parms
+
+    def __init__(self,  **kwargs):
+        for p in self.__class__.parms:
+            if p in kwargs:
+                setattr(self, p, kwargs.pop(p))
+
+        steps.BuildStep.__init__(self, **kwargs)
+
+    @defer.inlineCallbacks
+    def run(self):
+        buildid = self.build.getProperty ('flathub-build-id', "").replace("@","/")
+        buildnr = self.build.getProperty ('flathub-buildnumber', 0)
+        deps = builds.reverse_dependency_lookup(buildid)
+        for d in deps:
+            change = yield self.master.data.updates.addChange(
+                author = u"flathub",
+                comments = u'Rebuild triggered by %s build %s\n' % (buildid, buildnr),
+                project = 'forced-build-id-%s' % d.id,
+                branch = d.git_branch,
+                repository = d.url,
+                category = "build-dependency"
+            )
+
+        defer.returnValue(buildbot.process.results.SUCCESS)
+
 class AddArchSteps(steps.BuildStep):
     parms = steps.BuildStep.parms
     steps = None
@@ -535,7 +561,8 @@ update_repo_factory.addSteps([
                        workerdest="update-appdata.sh"),
     steps.ShellCommand(name='update appdata',
                        logEnviron=False,
-                       command=['./update-appdata.sh', flathub_upstream_repo_path])
+                       command=['./update-appdata.sh', flathub_upstream_repo_path]),
+    BuildDependenciesSteps(name='build dependencies')
 ])
 
 def asciiBasename(s):
