--- a/master.cfg
+++ b/master.cfg
@@ -344,7 +344,7 @@ class FlatpakBuildStep(buildbot.process.buildstep.ShellMixin, steps.BuildStep):
                    '--user', '--install-deps-from=flathub',
                    util.Property('extra-fb-args'),
                    '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
-                   '--default-branch', flathub_branch,
+                   '--default-branch', util.Property('flathub-branch'),
                    '--subject', util.Property('flathub-subject'),
                    'builddir', util.Interpolate('%(prop:flathub-manifest)s')]
         if props.getProperty("flathub-custom-buildcmd", False):
@@ -377,6 +377,7 @@ def create_build_factory():
     build_factory.workdir = util.Property('flathub-build-id')
     build_factory.addSteps([
         steps.Git(name="checkout manifest",
+                  logEnviron=False,
                   repourl=util.Property('repository'),
                   mode='incremental', branch='master', submodules=True),
         steps.ShellSequence(
@@ -423,7 +424,8 @@ def create_build_factory():
         steps.ShellCommand(
             name='Check that the right branch was built',
             haltOnFailure=True,
-            command=util.Interpolate('test ! -d repo/refs/heads/app -o -f repo/refs/heads/app/%(prop:flathub-id)s/%(prop:flathub-arch)s/' + flathub_branch)),
+            logEnviron=False,
+            command=util.Interpolate('test ! -d repo/refs/heads/app -o -f repo/refs/heads/app/%(prop:flathub-id)s/%(prop:flathub-arch)s/%(prop:flathub-branch)s')),
         steps.ShellSequence(
             name='Post-build work',
             logEnviron=False,
@@ -629,7 +631,7 @@ class FlathubPropertiesStep(steps.BuildStep, CompositeStepMixin):
             "flathub-build-id": buildid,
             "flathub-buildnumber": buildnumber,
             "flathub-manifest": data.get_manifest(),
-            "flathub-branch": data.fp_branch,
+            "flathub-branch": data.fp_branch if data.fp_branch else flathub_branch ,
             "flathub-custom-buildcmd": data.custom_buildcmd,
             "flathub-official-build": data.official and not force_test_build,
             "flathub-artifact-dir": "builds/%s-%s" % (buildid, buildnumber),
@@ -662,8 +664,9 @@ build_app_factory = util.BuildFactory()
 build_app_factory.addSteps([
     steps.Git(name="checkout manifest",
               repourl=util.Property('repository'),
-              mode='incremental', branch='master', submodules=False),
-    steps.SetPropertyFromCommand(command="git show --format=%s -s $(git rev-list --no-merges -n 1 HEAD)", property="git-subject"),
+              mode='incremental', branch='master', submodules=False, logEnviron=False),
+    steps.SetPropertyFromCommand(command="git show --format=%s -s $(git rev-list --no-merges -n 1 HEAD)",
+                                 property="git-subject", logEnviron=False),
     FlathubPropertiesStep(name="Set flathub properties"),
     steps.Trigger(name='Build all platforms',
                   haltOnFailure=True,
