Build nvidia driver on flathub

--- a/master.cfg
+++ b/master.cfg
@@ -348,7 +348,7 @@ class FlatpakBuildStep(buildbot.process.buildstep.ShellMixin, steps.BuildStep):
                    '--subject', util.Property('flathub-subject'),
                    'builddir', util.Interpolate('%(prop:flathub-manifest)s')]
         if props.getProperty("flathub-custom-buildcmd", False):
-            command = ['./build.sh', util.Property('flathub-arch')]
+            command = ['./build.sh', util.Property('flathub-arch'), 'repo', '',  '--sandbox --delete-build-dirs --user --install-deps-from=flathub', util.Property('flathub-subject')]
 
         rendered=yield self.build.properties.render(command)
         cmd = yield self.makeRemoteShellCommand(command=rendered)
