Generate static deltas on the builder
We now pull the latest official release from the flathub repo
into the builder once the build succeeded, then the build is
rebased on that using build-commit-from and deltas are
generated for this. The deltas are then included in the tarball
we upload.

When importing we rely on flatpak build-commit-from now
copying/rewriting the deltas, so we can just rsync any deltas from
import-repo to the real repo. In case anything went wrong with the
generated deltas and they don't apply anymore the existing call to
--generate-static-deltas will generate new ones.

--- a/master.cfg
+++ b/master.cfg
@@ -426,11 +426,44 @@ def create_build_factory():
             haltOnFailure=True,
             logEnviron=False,
             command=util.Interpolate('test ! -d repo/refs/heads/app -o -f repo/refs/heads/app/%(prop:flathub-id)s/%(prop:flathub-arch)s/%(prop:flathub-branch)s')),
+        # Copy the previous flathub commit to a local repo so we can use it as the parent
+        steps.ShellSequence(
+            name='Download previous revision',
+            doStepIf=BuildIsOfficial,
+            logEnviron=False,
+            commands=[
+                # We use bare-user mode so that the deltas work
+                shellArg(['ostree', '--repo=flathub-repo', 'init', '--mode=bare-user']),
+                shellArg(['ostree', 'remote', 'add', '--repo=flathub-repo', '--gpg-import=flathub.gpg', 'origin', flathub_upstream_repo]),
+                shellArg('for ref in `ostree --repo=repo refs | grep -v appstream`; do echo "$ref"; ostree --repo=flathub-repo pull --mirror --disable-fsync origin "$ref" || true; done')
+            ]),
+        steps.ShellSequence(
+            name='Rebase build on previous revision',
+            logEnviron=False,
+            doStepIf=BuildIsOfficial,
+            commands=[
+                # Merge the two into a new repo
+                shellArg(['ostree', '--repo=merged-repo', 'init', '--mode=archive-z2']),
+                shellArg(['ostree', 'pull-local', '--repo=merged-repo', 'flathub-repo']),
+                shellArg(['rm', '-rf', 'flathub-repo']),
+                shellArg(['flatpak', 'build-commit-from', '--src-repo=repo', 'merged-repo']),
+                # Switch merged-repo to 'repo', which is later packed up as the build result
+                shellArg(['rm', '-rf', 'repo']),
+                shellArg(['mv', 'merged-repo', 'repo'])
+            ]),
+        steps.ShellCommand(
+            name='Generate static deltas',
+            logEnviron=False,
+            doStepIf=BuildIsOfficial,
+            command=['flatpak', 'build-update-repo', '--generate-static-deltas', 'repo']),
         steps.ShellSequence(
             name='Post-build work',
             logEnviron=False,
+            doStepIf=BuildIsOfficial,
             commands=[
-                # Ensure directory is there
+                # Remove unreferenced objects to avoid uploading them
+                shellArg(['ostree', 'prune', '--repo=repo', '--refs-only', '--depth=0']),
+                # Ensure directories are there
                 shellArg(['mkdir', '-p', 'builddir/screenshots']),
                 # Copy screenshots
                 shellArg(['cp', '-r', 'builddir/screenshots', 'repo/'])
@@ -450,7 +483,7 @@ def create_build_factory():
         steps.ShellCommand(name='clean up',
                            alwaysRun=True,
                            logEnviron=False,
-                           command=['rm', '-rf', '.flatpak-builder/build', 'builddir', 'repo', 'repo.tar'])
+                           command=['rm', '-rf', '.flatpak-builder/build', 'builddir', 'repo', 'flathub-repo', 'merged-repo', 'repo.tar'])
     ])
     return build_factory
 
@@ -550,8 +583,11 @@ update_repo_factory.addSteps([
                         commands=[
                             shellArg(['rsync', '-rltv', '--ignore-existing',
                                       'repo/screenshots/', flathub_upstream_repo_path + '/screenshots/']),
+                            shellArg(['mkdir', '-p', 'import-repo/deltas']),# Ensure its there
+                            shellArg(['rsync', '-rltv', '--ignore-existing',
+                                      'import-repo/deltas/', flathub_upstream_repo_path + '/deltas/']),
                             shellArg(['ostree', 'pull-local', '-v', '--repo=' + flathub_upstream_repo_path, 'import-repo']),
-                            shellArg(['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + [flathub_upstream_repo_path])]),
+                            shellArg(['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + [flathub_upstream_repo_path])],),
     steps.ShellCommand(name='clean up',
                        logEnviron=False,
                        command=['rm', '-rf', 'repo', 'import-repo']),
