Set up janitor which will clean out logs older than 4 weeks

--- a/master.cfg
+++ b/master.cfg
@@ -14,6 +14,7 @@ import subprocess, re, json
 import os.path
 from buildbot.steps.worker import CompositeStepMixin
 from buildbot.www.hooks.github import GitHubEventHandler
+from datetime import timedelta
 
 import utils
 import builds
@@ -1021,3 +1022,11 @@ c['db'] = {
     # this at its default for all but the largest installations.
     'db_url' : "sqlite:///state.sqlite",
 }
+
+# configure a janitor which will delete all logs older than one month,
+# and will run on sundays at noon
+c['configurators'] = [util.JanitorConfigurator(
+    logHorizon=timedelta(weeks=4),
+    hour=12,
+    dayOfWeek=6
+)]
