Save and reuse downloaded sources
This saves the downloaded sources from a build and reuses it the
next build using --extra-sources=...

--- a/master.cfg
+++ b/master.cfg
@@ -345,11 +345,12 @@ class FlatpakBuildStep(buildbot.process.buildstep.ShellMixin, steps.BuildStep):
                    '--user', '--install-deps-from=flathub',
                    util.Property('extra-fb-args'),
                    '--mirror-screenshots-url=https://flathub.org/repo/screenshots', '--repo', 'repo',
+                   util.Interpolate('--extra-sources=%(prop:builddir)s/../downloads'),
                    '--default-branch', util.Property('flathub-branch'),
                    '--subject', util.Property('flathub-subject'),
                    'builddir', util.Interpolate('%(prop:flathub-manifest)s')]
         if props.getProperty("flathub-custom-buildcmd", False):
-            command = ['./build.sh', util.Property('flathub-arch'), 'repo', '',  '--sandbox --delete-build-dirs --user --install-deps-from=flathub', util.Property('flathub-subject')]
+            command = ['./build.sh', util.Property('flathub-arch'), 'repo', '', util.Interpolate('--sandbox --delete-build-dirs --user --install-deps-from=flathub --extra-sources=%(prop:builddir)s/../downloads '), util.Property('flathub-subject')]
 
         rendered=yield self.build.properties.render(command)
         cmd = yield self.makeRemoteShellCommand(command=rendered)
@@ -481,6 +482,15 @@ def create_build_factory():
                          hideStepIf=hide_on_skipped,
                          masterdest=util.Interpolate('%(prop:flathub-artifact-dir)s/%(prop:flathub-arch)s-repo.tar'),
                          blocksize=512*1024),
+        steps.FileDownload(name='downloading merge-sources.sh',
+                           haltOnFailure=True,
+                           hideStepIf=hide_on_success,
+                           mode=0755,
+                           mastersrc="scripts/merge-sources.sh",
+                           workerdest="merge-sources.sh"),
+        steps.ShellCommand(name='stash downloads',
+                           logEnviron=False,
+                           command=['./merge-sources.sh', util.Interpolate('%(prop:builddir)s/../downloads')]),
         steps.ShellCommand(name='clean up',
                            alwaysRun=True,
                            logEnviron=False,
