Add keep-builds option
Unless this is set we clear the entire .flatpak-builder directory
after a build. This means all builds are from scratch, which makes
a lot of sense for flathub as when we start adding worker the chance
of getting the same worker is low, and leaving random builds on workers
is going to eventually run the workers out of space.

--- a/config.json.sample
+++ b/config.json.sample
@@ -8,5 +8,6 @@
     "flathub-gpg-key": "01DA958A7DC283BF1D3D208CF154092B3A7124D7",
     "github-status-token": "",
     "admin-password": "test",
-    "github-change-secret": ""
+    "github-change-secret": "",
+    "keep-builds": true
 }
