--- a/master.cfg
+++ b/master.cfg
@@ -41,6 +41,7 @@ flathub_github_auth_client = getConfig('github-auth-client')
 flathub_github_auth_secret = getConfig('github-auth-secret')
 flathub_github_change_secret = getConfig('github-change-secret')
 flathub_github_status_token = getConfig('github-status-token')
+flathub_keep_builds = getConfig('keep-builds', False)
 
 # Tracks the last build number that was used to update the repo for a particular build-id
 # So we avoid going backwards if the builds finish in the wrong order
@@ -494,7 +495,9 @@ def create_build_factory():
         steps.ShellCommand(name='clean up',
                            alwaysRun=True,
                            logEnviron=False,
-                           command=['rm', '-rf', '.flatpak-builder/build', 'builddir', 'repo', 'flathub-repo', 'merged-repo', 'repo.tar'])
+                           command=['rm', '-rf',
+                                    '.flatpak-builder/build' if flathub_keep_builds else '.flatpak-builder',
+                                    'builddir', 'repo', 'flathub-repo', 'merged-repo', 'repo.tar'])
     ])
     return build_factory
 
