Add periodic prune scheduler

--- a/master.cfg
+++ b/master.cfg
@@ -15,6 +15,7 @@ import os.path
 from buildbot.steps.worker import CompositeStepMixin
 from buildbot.www.hooks.github import GitHubEventHandler
 from datetime import timedelta
+from datetime import datetime
 
 import utils
 import builds
@@ -936,6 +937,56 @@ c['builders'].append(
                        locks=[import_lock.access('exclusive')],
                        workernames=flathub_update_workers,
                        factory=force_import_factory))
+
+# Prune repo
+
+@util.renderer
+def makeBackupName(props):
+    return flathub_upstream_repo_path + "-backup-" + datetime.now().strftime("%Y-%m-%d")
+
+prune_factory = util.BuildFactory()
+prune_factory.addSteps([
+    steps.ShellCommand(
+        name='Backup',
+        haltOnFailure=True,
+        logEnviron=False,
+        usePTY=True,
+        locks=[repo_lock.access('exclusive')],
+        timeout=10000,
+        command=['cp', '-aRln', flathub_upstream_repo_path, makeBackupName]),
+    steps.ShellCommand(
+        name='Prune',
+        haltOnFailure=True,
+        logEnviron=False,
+        usePTY=True,
+        locks=[repo_lock.access('exclusive')],
+        timeout=10000,
+        command=['ostree', 'prune', '--repo='+flathub_upstream_repo_path, '--refs-only', '--depth=3'])
+])
+
+c['builders'].append(
+    util.BuilderConfig(name='Prune',
+                       collapseRequests=True,
+                       locks=[import_lock.access('exclusive')],
+                       workernames=flathub_update_workers,
+                       factory=prune_factory))
+
+force_prune = schedulers.ForceScheduler(
+    name="prune",
+    buttonName="Prune",
+    label="Prun",
+    builderNames=["Prune"],
+
+    codebases=[util.CodebaseParameter(codebase='', hide=True)],
+)
+c['schedulers'].append(force_prune)
+
+periodic_prune = schedulers.Periodic(name="PeriodicPrune",
+                                     builderNames=["Prune"],
+                                     periodicBuildTimer=7*24*60*60)
+c['schedulers'].append(periodic_prune)
+
+
 
 
 ####### BUILDBOT SERVICES
